# clinvar-ingest

./: .gitignore  Dockerfile  Dockerfile-workflow-py  MANIFEST.in  README.md  deploy.bash  lint  local-env.sh  log_conf.json  log_conf.py  log_conf.yaml  pyproject.toml  release.bash  workflow.yaml
.cloudbuild/: .docker.cloudbuild.yaml  docker.cloudbuild.yaml  workflow-py.docker.cloudbuild.yaml
.github/workflows/: ci.yaml  deploy-job-main.yaml  deploy.yaml  release.yaml
clinvar_ingest/: .dev.env  cli.py  config.py  fs.py  log_conf.json  log_conf.py  main.py  model.py  parse.py  reader.py  slack.py  status.py  utils.py
clinvar_ingest/api/: constants.py  lifespan_hooks.py  main.py  main_test.py  middleware.py  model.py  status_file.py
clinvar_ingest/api/model/: requests.py  responses.py
clinvar_ingest/bigquery/table_definitions/: create_external_tables.sql
clinvar_ingest/cloud/: cloudrun_job_execution.py  gcs.py
clinvar_ingest/cloud/bigquery/: bq-get-schemas.bash  create_tables.py  processing_history.py  stored_procedures.py
clinvar_ingest/cloud/bigquery/bq_json_schemas/: clinical_assertion.bq.json  clinical_assertion_observation.bq.json  clinical_assertion_somatic.bq.json  clinical_assertion_trait.bq.json  clinical_assertion_trait_set.bq.json  clinical_assertion_variation.bq.json  datarepo_row_ids.bq.json  gene.bq.json  gene_association.bq.json  processing_history.bq.json  rcv_accession.bq.json  rcv_accession_classification.bq.json  rcv_mapping.bq.json  scv_summary.bq.json  single_gene_variation.bq.json  submission.bq.json  submitter.bq.json  trait.bq.json  trait_mapping.bq.json  trait_set.bq.json  variation.bq.json  variation_archive.bq.json  variation_archive_classification.bq.json  variation_archive_somatic.bq.json  xml_archive.bq.json
clinvar_ingest/cloud/bigquery/table_definitions/: create_external_tables.sql
clinvar_ingest/model/: common.py  rcv.py  trait.py  variation_archive.py
clinvar_ingest/model_somatic/: variation_archive.py
docs/: ReleaseDateProcessing.md
misc/re-run/: archive-rcvs.sh  archive-vcvs.sh  confluent-prod_clinvar-rcv-ftp-watcher_20241203.txt  confluent-prod_clinvar-somatic-ftp-watcher_20241203.txt  execute-re-runs.py  ftp-watcher-rcv-2024-10-27.txt  ftp-watcher-rcv-2024-11-03.txt  ftp-watcher-vcv-2024-10-27.txt  ftp-watcher-vcv-2024-11-03.txt  generate-ftp-watcher-messages.py  prior_xml_archives-ftp-watcher-rcv.txt  prior_xml_archives-ftp-watcher-vcv.txt  rcv-archives.txt  read-topic.py  replace-ftp-watcher-messages.py  vcv-archives.txt
test/: Readme.md  conftest.py  test_includedrecord.py  test_issue_182.py  test_parse.py  test_parse_classification.py  test_rcv_xml.py  test_reader.py  test_trait.py  test_utils.py  test_variation.py
test/api/: main_test.py  test_main.py
test/clinvar_somatic/: test_parse.py
test/data/: VCV000000002.xml  VCV000000010.xml  VCV000000051.xml  VCV000013961.xml  VCV000025511.xml  VCV000097006.xml  VCV000177881.xml  VCV000222476.xml  VCV000375881.xml  VCV001264328.xml  clinvar-variation-1264328.xml  clinvar-variation-2.xml  clinvar-variation-634266.xml  combine.py  filter-vcv-more-than-1-trait.py  filter.py  filter_somatic-oncogenicity.py  original-clinvar-variation-10.xml  original-clinvar-variation-222476.xml  original-clinvar-variation-240713.xml  original-clinvar-variation-32.xml  original-clinvar-variation-40200.xml  original-clinvar-variation-406155.xml  original-clinvar-variation-424711.xml  original-clinvar-variation-4897.xml  original-clinvar-variation-51.xml
test/data/api/: README.md  copy-request-body-test.json  workflow-request-body-test.json
test/data/clinvar-somatic/: VCV000040200.xml  VCV000406155.xml
test/data/clinvar_somatic/: VCV000000032.xml  VCV000004897.xml  VCV000424711.xml  VCV000634266.xml  filter-vcv-more-than-1-trait.py  filter.py
test/data/rcv/: RCV000000010.xml  RCV000000012.xml
